[tool.poetry]
name = "yves"
version = "0.1.0"
description = "Benchmarks and scripts for analysis"
authors = ["James Connolly <jimmy@1024bees.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysmelt = "0.4.1"
textual = "^0.71.0"
textual-dev = "^1.5.1"
textual-plotext = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
